# atalla-ramulator2

./: .gitignore  Makefile  dpi_test_config.yaml  test_dpi  transcript  vsim.wlf  vsim_stacktrace.vstf
build_debug/: CMakeCache.txt
configs/: ddr3_config.yaml  ddr4_config.yaml  ddr5_config.yaml  gddr6_config.yaml  hbm2_config.yaml  hbm3_config.yaml  lpddr5_config.yaml  meminit.hex
scripts/: gen_sdma_meminit.py
sim/: run_questa.sh  run_vsim.do
src/: CMakeLists.txt
src/addr_mapper/impl/: linear_mappers.cpp
src/axi/: axi_bus_if.sv  axi_bus_params.svh  axi_bus_pkg.sv
src/dpi_wrapper/: CMakeLists.txt  ramulator_dpi.cpp  ramulator_dpi.h  ramulator_sv_wrapper.sv  run_sv_test.sh  sim_main.cpp  tb_ramulator_dpi.sv  test_dpi.c  test_ramulator.sv  test_sdma.sv
src/dram/: spec.h
src/dram/impl/: HBM2.cpp
src/dram_controller/impl/refresh/: no_refresh.cpp  no_refresh.cpp.bak
waves/: tb_ramulator_dpi.do  test_ramulator.do
